src/main.scss
@keyframes loading {
  0% {
    transform: translate3d(-30%, 0, 0);
  }
  50%, 100% {
    transform: translate3d(30%, 0, 0);
  }
}

body {
  background-color: #212121;
  color: #fff;

  nav, .page-footer {
    background-color: #616161;

    .nav-wrapper {
      .row {
        height: 100%;
      }
    }

    .brand-logo {
      display: flex;
      height: 100%;
      align-items: center;
      gap: 8px;

      img, a {
        max-height: 100%;
        height: 100%;
      }
    }

    ul.left {
      margin-left: 64px;
    }

    .container .links {
      img {
        height: 48px;
      }
    }
  }

  input[type="text"] {
    color: white;
  }

  .card {
    background-color: #616161;

    .card-image {
      padding: 16px;
      background-color: white;

      .error, .success {
        font-size: 142px;
        display: flex;
        justify-content: center;
      }
    }

    .status {
      display: flex;
      align-items: center;
      gap: 8px;
    }

    &.package {
      .collection-item {
        .package-information {
          display: none;

          span {
            display: list-item;
            list-style: square inside;
          }
        }

        input[type="radio"][name="package"]:checked ~ .package-information {
          display: block;
        }

        label {
          color: white;
        }
      }
    }

    &.paypal {
      .card-action {
        text-align: center;
      }
    }

    &.missing-steam-connection {
      .card-image {
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: #424242;

        .image {
          width: 88px;
          height: 88px;
        }

        .connector {
          width: 28px;
          height: 28px;
          margin: 0 37px;
        }
      }

      .card-content {
        img {
          margin-top: 16px;
          max-width: 100%;
        }
      }
    }

    i.success {
      color: #43a047;
    }

    i.pending {
      color: #fdd835;
    }

    i.error {
      color: #e53935;
    }
  }

  .perk-list {
    display: flex;
    justify-content: center;
    gap: 16px;
    flex-wrap: wrap;

    > div {
      width: 190px;
      min-width: 190px;
      max-width: 190px;
      text-align: center;
      background-color: transparent;
      box-shadow: none;

      .card-image {
        margin-top: 16px;
        background-color: transparent;
        border: 2px solid white;
        border-radius: 100%;
        display: inline-block;

        img {
          height: 38px;
          width: 38px;
        }
      }

      .card-content {
        padding: 16px;
      }

      &.owned-perk.loading {
        overflow: hidden;

        .card-image {
          background-color: white;

          div {
            height: 38px;
            width: 38px;
          }
        }

        .card-content {
          .placeholder:first-child {
            margin-top: 0;
          }

          .placeholder {
            content: ' ';
            margin-top: 6px;
            height: 6px;
            background-color: white;
          }
        }

        &::before {
          position: absolute;
          top: 0;
          right: 0;
          bottom: 0;
          left: 50%;
          z-index: 1;
          width: 500%;
          margin-left: -250%;
          background: linear-gradient(to right, rgba(255, 255, 255, 0) 46%, #212121 50%, rgba(255, 255, 255, 0) 54%) 50% 50%;
          animation: loading 1.8s linear infinite;
          content: " ";
          pointer-events: none;
        }
      }
    }
  }

  .collection {
    .collection-item {
      background-color: transparent;
    }
  }

  .collection.with-header {
    .collection-header {
      background-color: transparent;
    }
  }

  [type="radio"]:not(:checked) + span:before, [type="radio"]:not(:checked) + span:after {
    border-color: white;
  }

  input[type="submit"].link {
    border: 0;
    background: transparent;
    color: #ffab40;
    margin-right: 24px;
    transition: color .3s ease;
    text-transform: uppercase;
    cursor: pointer;

    &:hover {
      color: #ffd8a6;
    }
  }
}

